--- a/apps/web/src/pages/fintech.astro
+++ b/apps/web/src/pages/fintech.astro
@@ -185,7 +185,7 @@ import { SlashIcon } from "@lucide/astro";
     </div>
   </section>
 
-  <section>
+  <section class="max-w-6xl px-5 mx-auto py-20">
     <Card
       class="relative aspect-[320/390] bg-gray-100 dark:bg-gray-800 w-full max-w-[320px] border-none"
     >
