--- a/apps/web/src/pages/index.astro
+++ b/apps/web/src/pages/index.astro
@@ -25,6 +25,8 @@ import StarlightPage from "@astrojs/starlight/components/StarlightPage.astro";
   }}
 >
   <BrowserHero />
+  <div id="browser-hero-panel-end" class="w-full mt-[-1px] h-px bottom-0 -z-10">
+  </div>
   <div class="h-full fixed bg-muted top-14 border left-5 right-5 rounded-t-2xl">
   </div>
   <div
@@ -39,6 +41,10 @@ import StarlightPage from "@astrojs/starlight/components/StarlightPage.astro";
   h1 {
     letter-spacing: calc(var(--letter-spacing) - 0.025em);
     @apply text-5xl font-medium text-left text-balance block max-w-xl;
+  }
+
+  html {
+    scroll-snap-type: y mandatory;
   }
 
   .main-frame {
@@ -71,6 +77,7 @@ import StarlightPage from "@astrojs/starlight/components/StarlightPage.astro";
     animation-timeline: scroll(root block);
     animation-range: 40% 80%;
     transform-origin: left center;
+    scroll-snap-align: center;
 
     @apply sticky top-40 px-5 py-0 mb-28 z-10 pt-0 max-w-[1500px] mx-auto;
   }
@@ -84,9 +91,9 @@ import StarlightPage from "@astrojs/starlight/components/StarlightPage.astro";
     animation-timeline: scroll(root block);
     animation-range: 20% 100%;
     transform: scale(0.95); */
-    max-width: calc(100% - 3rem);
-
-    @apply pt-10 mx-auto;
+    max-width: calc(100% - var(--spacing) * 10);
+    padding-top: calc(var(--spacing) * 12);
+    @apply mx-auto;
   }
 
   .fade {
@@ -131,7 +138,7 @@ import StarlightPage from "@astrojs/starlight/components/StarlightPage.astro";
     transform-origin: center top;
   }
 
-  .browser iframe {
+  /* .browser iframe {
     pointer-events: none;
     animation: enablePointerEvents linear both;
     animation-timeline: scroll(root block);
@@ -142,5 +149,5 @@ import StarlightPage from "@astrojs/starlight/components/StarlightPage.astro";
     to {
       pointer-events: auto;
     }
-  }
+  } */
 </style>
