fix(docs): improve hero, add card hidden content variant

--- a/apps/web/src/components/BrowserHero.astro
+++ b/apps/web/src/components/BrowserHero.astro
@@ -108,7 +108,7 @@ const leanPresets = Object.fromEntries(
       this.iframeActive = true;
     },
   }"
-  class="browser will-change-transform not-content relative z-10 h-[calc(100svh_-_var(--spacing)_*_18)] rounded-t-2xl overflow-clip flex flex-col"
+  class="browser will-change-transform mt-0 not-content relative z-10 h-[calc(100svh_-_var(--spacing)_*_18)] rounded-t-2xl overflow-clip flex flex-col"
 >
   <div
     class="bg-muted dark:bg-foreground/10 backdrop-blur-xl not-content px-5 py-3 grid grid-cols-12"
