--- a/packages/ui/src/components/Card.astro
+++ b/packages/ui/src/components/Card.astro
@@ -241,9 +241,8 @@ const hiddenContentVariants = cva(
             className: Astro.props.hiddenContentClass,
           }),
         )}
-        slot="hidden-content"
       >
-        <slot name="hidden-content" />
+        <slot name="hiddenContent" />
       </div>
     )
   }
