--- a/apps/web/src/pages/index.astro
+++ b/apps/web/src/pages/index.astro
@@ -88,7 +88,7 @@ import StarlightPage from "@astrojs/starlight/components/StarlightPage.astro";
     transform-origin: left center;
     scroll-snap-align: center;
 
-    @apply sticky top-18 px-5 py-20 z-10 max-w-[1500px] mx-auto;
+    @apply sticky top-18 px-5 pt-14 pb-20 z-10 max-w-[1500px] mx-auto;
   }
 
   @supports (animation-timeline: auto) {
